Thicken the Java SE 21 column to match the C++/Python depth.
Each article now walks a real path: JLS/JVMS/JEP rules, OpenJDK 21
source (IntegerCache, putVal/treeifyBin, ArrayList grow), a full
end-to-end example, and anti-patterns. Adds AQS, thread-pool execute
order, safepoints, G1 log reading, class-loader identity, and
interview follow-ups that keep digging past the first sentence.